E-Mail notification updated

--- a/src/app/shared/profile-info-dialog/email-notification-dialog/email-notification-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/email-notification-dialog/email-notification-dialog.component.html
@@ -5,7 +5,8 @@
   <mat-card-content>
     <p>
       Eine Bestätigungs-E-Mail wurde an
-      <span class="email">{{ email }}</span> gesendet. <br />
+      <span class="email">{{ email }}</span> gesendet. <br />(Prüfe auch den
+      Spam-Ordner) <br />
       <br />
       Die Änderungen werden erst aktiv, wenn die E-Mail bestätigt wurde und du
       dich neu einloggst.
