--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-edit/own-private-message-edit.component.html
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-edit/own-private-message-edit.component.html
@@ -2,13 +2,18 @@
     <div class="textarea-container">
       <textarea
         placeholder="{{ message.content }}"
-        id=""
+        id="editedMessageContent"
         [(ngModel)]="editedMessageContent"
         (keydown.enter)="changeMessage(); $event.preventDefault()"
       ></textarea>
       <div class="icons-container">
         <div class="left-icons">
-          <mat-icon class="material-symbols-outlined">sentiment_satisfied</mat-icon>
+          <mat-icon
+          class="material-symbols-outlined"
+          [matMenuTriggerFor]="emojiMenu"
+          (click)="toggleBorder('emoji')"
+          >sentiment_satisfied
+        </mat-icon>
         </div>
         <div class="button-container">
           <button class="button-secondary" (click)="clearInput()">Abbrechen</button>
@@ -16,5 +21,28 @@
         </div>
       </div>
     </div>
+    <div *ngIf="message?.attachmentUrls?.length > 0" class="attachment-container">
+      <a
+        *ngFor="let attachmentUrl of message.attachmentUrls"
+        [href]="attachmentUrl"
+      >
+        <app-attachment-preview [actualAttachmentUrls]="[attachmentUrl]">
+        </app-attachment-preview>
+      </a>
+    </div>
+
+    <mat-menu xPosition="after" #emojiMenu yPosition="above">
+      <emoji-mart
+        title="Pick your emoji…"
+        emoji="point_up"
+        set="apple"
+        (emojiClick)="addEmoji($event)"
+        [totalFrequentLines]="2"
+        [i18n]="{
+          search: 'Suche Emojis',
+          categories: { search: 'Suchergebnisse', recent: 'Neueste' }
+        }"
+      ></emoji-mart>
+    </mat-menu>
   </section>
   
