--- a/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.html
+++ b/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.html
@@ -51,7 +51,15 @@
         >
         <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
       </div>
-      <span class="message">{{ message?.content }}</span>
+      <span class="message">{{ message?.content }}
+        <div *ngIf="message?.attachmentUrls?.length > 0">
+          <a *ngFor="let attachmentUrl of message.attachmentUrls" [href]="attachmentUrl">
+            <app-attachment-preview 
+              [actualAttachmentUrls]="[attachmentUrl]">
+            </app-attachment-preview>
+          </a>
+        </div>
+      </span>
       <app-message-reactions [message]="message" *ngIf="message.reactions.length > 0"></app-message-reactions>
     </div>
   </div>
