--- a/src/app/shared/components/attachment-preview/attachment-preview.component.scss
+++ b/src/app/shared/components/attachment-preview/attachment-preview.component.scss
@@ -4,7 +4,6 @@ section {
   align-items: center;
   width: 100%;
   height: 100%;
-  padding-left: 20px;
 }
 .image {
   position: relative;
@@ -29,13 +28,27 @@ section {
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  &:hover {
+    .close-icon {
+      display: block !important;
+    }
+  }
+}
+
+.close-icon {
+  position: absolute;
+  color: var(--text-color);
+  top: 5px;
+  right: 5px;
+  display: none !important;
 }
 
 .embed-container {
-    position: relative;
-    width: 100%;
-    overflow: hidden; /* Versteckt die Scrollbars */
-  }
+  position: relative;
+  width: 100%;
+  overflow: hidden; /* Versteckt die Scrollbars */
+}
 
 .embed-container embed {
   width: 100%;
