Added some functions to close the method selector after choosing an attachment and for the possibility to delete own attachments at new messages and in the chat-history.

--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
@@ -12,7 +12,7 @@
     <div *ngIf="message?.attachmentUrls?.length > 0">
       <a *ngFor="let attachmentUrl of message.attachmentUrls" [href]="attachmentUrl">
         <app-attachment-preview 
-          [actualAttachmentUrls]="[attachmentUrl]">
+          [actualAttachmentUrls]="[attachmentUrl]" [message]="message">
         </app-attachment-preview>
       </a>
     </div>
