--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
@@ -12,7 +12,7 @@
         *ngFor="let attachmentUrl of message.attachmentUrls"
         [href]="attachmentUrl"
       >
-        <app-attachment-preview [actualAttachmentUrls]="[attachmentUrl]">
+        <app-attachment-preview [actualAttachmentUrls]="[attachmentUrl]" [message]="message">
         </app-attachment-preview>
       </a>
     </div>
