--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -67,7 +67,7 @@
 
   <mat-sidenav-container class="example-container">
     <mat-sidenav #attachmentSidenav mode="side" position="end"
-      ><app-attachment-preview [actualAttachmentUrls]="attachmentUrls"></app-attachment-preview>
+      ><app-attachment-preview [actualAttachmentUrls]="attachmentUrls" (attachmentRemoved)="onAttachmentRemoved($event)"></app-attachment-preview>
     </mat-sidenav>
     <mat-sidenav-content></mat-sidenav-content>
   </mat-sidenav-container>
