--- a/src/app/shared/components/attachment-preview/attachment-preview.component.scss
+++ b/src/app/shared/components/attachment-preview/attachment-preview.component.scss
@@ -42,16 +42,8 @@ section {
   top: 5px;
   right: 5px;
   display: none !important;
-}
 
-.embed-container {
-  position: relative;
-  width: 100%;
-  overflow: hidden; /* Versteckt die Scrollbars */
-}
-
-.embed-container embed {
-  width: 100%;
-  height: 100%;
-  border: none; /* Optional: Entfernt den Rahmen */
+  &:hover {
+    cursor: pointer;
+  }
 }
