--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -2,7 +2,7 @@
   .mat-mdc-menu-panel {
     overflow: hidden !important;
     max-width: none !important;
-    border-radius: 30px !important;
+    border-radius: 30px;
   }
 
   emoji-mart-anchors {
