--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.scss
@@ -1,7 +1,7 @@
 ::ng-deep {
   .mat-mdc-menu-panel {
     max-width: none !important;
-    border-radius: 0px 30px 30px 30px !important;
+    border-radius: 0px 30px 30px 30px;
   }
 }
 
@@ -48,7 +48,7 @@ section {
     opacity: 0;
     transition: opacity 0.3s ease, visibility 0.3s ease;
     padding: 2px 10px;
-  
+
     div {
       display: flex;
       align-items: center;
@@ -69,7 +69,6 @@ section {
   .inner-add-emoji-container-show {
     visibility: unset !important;
     opacity: 1 !important;
-    cursor: pointer;
   }
 
   .edit-message-text {
@@ -113,5 +112,9 @@ section {
     width: 70px;
     height: 70px;
     border-radius: 100px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
   
