--- a/src/app/main/private-chat/private-chat.component.scss
+++ b/src/app/main/private-chat/private-chat.component.scss
@@ -19,8 +19,7 @@ app-private-chat-header {
 app-private-chat-history {
   display: flex;
   flex-grow: 1;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 app-private-chat-placeholder {
