--- a/src/app/shared/components/add-users-to-channel/add-users-to-channel.component.html
+++ b/src/app/shared/components/add-users-to-channel/add-users-to-channel.component.html
@@ -4,11 +4,7 @@
     <mat-chip-row (removed)="remove(user)">
       <img src="{{ user.photoURL }}" alt="" />
       {{ user.userName }}
-      <button
-        *ngIf="user.userId !== userData.uid"
-        matChipRemove
-        [attr.aria-label]="'remove ' + user"
-      >
+      <button matChipRemove [attr.aria-label]="'remove ' + user">
         <mat-icon>close</mat-icon>
       </button>
     </mat-chip-row>
